poke/testsuite/poke.pkl/sl-diag-2.pk
/* { dg-do compile } */

defvar i = (1 as int<13>) <<. (12 + 1); /* { dg-error "too big" } */
